A little better animation

--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -288,7 +288,7 @@
     layerControl.options.collapsed = false;
     layerControl.addTo(map);
     layerControl.collapse = function(){
-        $('div.leaflet-control-layers-base label').slideToggle()
+        $('div.leaflet-control-layers-base').slideToggle()
         $('#layerBtn').toggleClass('layerCollapse')
     }
 function fullExtent(event){
