Object builder for mini-project page

--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -353,7 +353,19 @@ function resetHighlightProjectHover(project){
     });
 }
 function clickHighlightProject(project) {
-
+    console.log(project)
+    //feature_collection = data.features
+    //geoJson.clearLayers()
+    //geoJson.addData(feature_collection.features)
+    //if(feature_collection.features.length>0){
+    //    if(Object.keys(geoJson._layers).length>0){
+    //        var bounds = geoJson.getBounds()
+    //        zoomToFeature(bounds)
+    //    }
+   // }
+    //else{
+    //    map.fitBounds([[52,68],[-42,-29]])
+   // }
 };
 function highlightProject(e) {
 //Change style and count geocodes with same project
