Just a little more formatting

--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -80,7 +80,7 @@
               }
                   else{
                   map.fitBounds([[52,68],[-42,-29]])
-                  $('#resultcount').html("<strong>No search results.</strong>")
+                  $('#resultcount').html("<strong style='line-height:28px;'>No search results.</strong><hr>")
               }
               })
 //Autocomplete function
